--- a/index.html
+++ b/index.html
@@ -198,44 +198,44 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) This website still under construction, but feel free to explore the pages. Thank you for visiting! *TIP: This is best experienced on a desktop. </p>
 
 <div class="cute-box">
-    <a href="https://damarisguzman.neocities.org/about" style="color: inherit; text-decoration: none;">
+    <a href="https://damarisguzman.neocities.org/abou" style="color: inherit; text-decoration: none;">
         Click to learn about me
     </a>
 </div>
     </div>
 <div class="grid-container">
     <div class="grid-item">
-        <a href="https://damarisguzman.neocities.org/currently">
+        <a href="https://damarisguzman.neocities.org/currentl">
             <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Image 1">
             <div class="overlay-text">Current Project/s</div>
         </a>
     </div>
     <div class="grid-item">
-       <a href="https://damarisguzman.neocities.org/newmaris">
+       <a href="https://damarisguzman.neocities.org/newmari">
         <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="Image 3">
         <div class="overlay-text">New Media</div>
        </a>
     </div>
     <div class="grid-item">
-       <a href="https://damarisguzman.neocities.org/video">
+       <a href="https://damarisguzman.neocities.org/vide">
         <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Image 2">
         <div class="overlay-text">Video Editing</div>
        </a>
     </div>
     <div class="grid-item">
-      <a href="https://damarisguzman.neocities.org/3danimation"> 
+      <a href="https://damarisguzman.neocities.org/3danimatio"> 
         <img src="https://damarisguzman.neocities.org/Portfolio/Guzman_One_2024.png" alt="Image 4">
         <div class="overlay-text">3D Animation</div>
       </a>
     </div>
     <div class="grid-item">
-      <a href="https://damarisguzman.neocities.org/archive">
+      <a href="https://damarisguzman.neocities.org/archiv">
         <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Image 5">
         <div class="overlay-text">Archive</div>
       </a>
     </div>
     <div class="grid-item">
-      <a href="https://damarisguzman.neocities.org/more">
+      <a href="https://damarisguzman.neocities.org/">
         <img src="https://damarisguzman.neocities.org/Portfolio/DRIP.JPG" alt="Image 6">
         <div class="overlay-text">More Media</div>
       </a>
