--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>This is my first HTML page.</p>
-    
+
     <!-- Brain GIF -->
     <img src="brain.gif" alt="Brain GIF">
-</body>
-<a href="about.html">Go to About Page</a>
 
+    <!-- Link to About Page -->
+    <br>
+    <a href="about.html">Go to About Page</a>
+</body>
 </html>
