--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>Click the GIF to enter:</p>
+    <p>This is my first HTML page.</p>
 
-    <!-- Clickable GIF linking to about.html -->
-    <a href="about.html">
-        <img src="awo.gif" alt="Click to enter">
-    </a>
+    <!-- Brain GIF -->
+    <img src="brain.gif" alt="Brain GIF">
+
+    <!-- Link to About Page -->
+    <br>
+    <a href="about.html">Go to About Page</a>
 </body>
 </html>
