--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This is my first HTML page.</p>
+    <p>Click the GIF to enter:</p>
 
-    <!-- Brain GIF -->
-    <img src="brain.gif" alt="Brain GIF">
-
-    <!-- Link to About Page -->
-    <br>
-    <a href="about.html">Go to About Page</a>
+    <!-- Clickable GIF linking to About Page -->
+    <a href="about.html">
+        <img src="brain.gif" alt="Brain GIF">
+    </a>
 </body>
 </html>
