--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
+    <style>
+        /* Button Styling */
+        .gallery-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            font-weight: bold;
+            color: white;
+            background-color: black;
+            border: none;
+            cursor: pointer;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .gallery-button:hover {
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to My Website</h1>
@@ -13,5 +33,10 @@
     <a href="about.html">
         <img src="brain.gif" alt="Brain GIF">
     </a>
+
+    <!-- Button linking to Gallery Page -->
+    <br>
+    <a href="gallery.html" class="gallery-button">Go to Gallery</a>
+
 </body>
 </html>
