--- a/index.html
+++ b/index.html
@@ -3,40 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web Page</title>
+    <title>Every day I see my dream</title>
     <style>
-        /* Button Styling */
-        .gallery-button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f5f5f5;
+        }
+
+        .gallery {
+            display: flex;
+            gap: 20px;
+        }
+
+        .gallery-item {
+            position: relative;
+            overflow: hidden;
+            width: 300px;
+            height: 200px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .gallery-item:hover img {
+            opacity: 0.3;
+        }
+
+        .description {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
             font-size: 18px;
             font-weight: bold;
-            color: white;
-            background-color: black;
-            border: none;
-            cursor: pointer;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.3s;
+            text-align: center;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
         }
-        .gallery-button:hover {
-            background-color: gray;
+
+        .gallery-item:hover .description {
+            opacity: 1;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>Click the GIF to enter:</p>
 
-    <!-- Clickable GIF linking to About Page -->
-    <a href="about.html">
-        <img src="brain.gif" alt="Brain GIF">
-    </a>
-
-    <!-- Button linking to Gallery Page -->
-    <br>
-    <a href="gallery.html" class="gallery-button">Go to Gallery</a>
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="Comp 6153.gif" alt="gif">
+            <div class="description">Neuro bytes 1</div>
+        </div>
+        <div class="gallery-item">
+            <img src="text1.png" alt="Image 2">
+            <div class="description">Vessel</div>
+        </div>
+    </div>
 
 </body>
 </html>
