--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: white;
-            font-size: 18px;
-            font-weight: bold;
+            font-size: 36px;
+            font-weight: regular;
             text-align: center;
             opacity: 0;
             transition: opacity 0.3s ease-in-out;
