--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You are loved</title>
+    <title>Connecting...</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,6 +52,16 @@
         .header a span:nth-child(8) { animation-delay: 0.7s; }
         .header a span:nth-child(9) { animation-delay: 0.8s; }
         .header a span:nth-child(10) { animation-delay: 0.9s; }
+        .header a span:nth-child(19) { animation-delay: 0.1s; }
+        .header a span:nth-child(18) { animation-delay: 0.2s; }
+        .header a span:nth-child(17)) { animation-delay: 0.3s; }
+        .header a span:nth-child(16) { animation-delay: 0.4s; }
+        .header a span:nth-child(15) { animation-delay: 0.5s; }
+        .header a span:nth-child(14) { animation-delay: 0.6s; }
+        .header a span:nth-child(13) { animation-delay: 0.7s; }
+        .header a span:nth-child(12) { animation-delay: 0.8s; }
+        .header a span:nth-child(11) { animation-delay: 0.9s; }
+        
 
         @keyframes wave {
             0% { transform: translateY(0); }
@@ -189,6 +199,12 @@
         <span>i</span>
         <span>s</span>
         <span> </span>
+        <span>G</span>
+        <span>U</span>
+        <span>Z</span>
+        <span>M</span>
+        <span>A</span>
+        <span>N</span>
     </a></h1>
 </div>
 
@@ -245,7 +261,7 @@
 </div>
 
 <div class="footer">
-    <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
+    <p>© 2024 DAMARIS huh GUZMAN @GRILL0101</p>
 </div>
 
 </body>
