--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connecting... huh</title>
+    <title>Connect</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
@@ -52,15 +52,16 @@
         .header a span:nth-child(8) { animation-delay: 0.7s; }
         .header a span:nth-child(9) { animation-delay: 0.8s; }
         .header a span:nth-child(10) { animation-delay: 0.9s; }
-        .header a span:nth-child(19) { animation-delay: 0.1s; }
-        .header a span:nth-child(18) { animation-delay: 0.2s; }
-        .header a span:nth-child(17)) { animation-delay: 0.3s; }
-        .header a span:nth-child(16) { animation-delay: 0.4s; }
-        .header a span:nth-child(15) { animation-delay: 0.5s; }
-        .header a span:nth-child(14) { animation-delay: 0.6s; }
-        .header a span:nth-child(13) { animation-delay: 0.7s; }
-        .header a span:nth-child(12) { animation-delay: 0.8s; }
-        .header a span:nth-child(11) { animation-delay: 0.9s; }
+        .header a span:nth-child(11) { animation-delay: 1.0s; }
+        .header a span:nth-child(12) { animation-delay: 1.1s; }
+        .header a span:nth-child(13) { animation-delay: 1.2s; }
+        .header a span:nth-child(14) { animation-delay: 1.3s; }
+        .header a span:nth-child(15) { animation-delay: 1.4s; }
+        .header a span:nth-child(16) { animation-delay: 1.5s; }
+        .header a span:nth-child(17) { animation-delay: 1.6s; }
+        .header a span:nth-child(18) { animation-delay: 1.7s; }
+        .header a span:nth-child(19) { animation-delay: 1.8s; }
+
         
 
         @keyframes wave {
