--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connect</title>
+    <title>Connecting</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif, sans-serif;
@@ -262,7 +262,7 @@
 </div>
 
 <div class="footer">
-    <p>© 2024 DAMARIS huh GUZMAN @GRILL0101</p>
+    <p>© 2024 DAMARIS GUZMAN</p>
 </div>
 
 </body>
