--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 <div class="grid-container">
     <div class="grid-item">
-        <a href="https://damaris-guzman.github.io/currently.io/">
+        <a href="https://damaris-guzman.github.io/currently.html/">
             <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Image 1">
             <div class="overlay-text">Current Project/s</div>
         </a>
@@ -240,7 +240,7 @@
        </a>
     </div>
     <div class="grid-item">
-      <a href="https://damarisguzman.neocities.org/3danimation"> 
+      <a href="damaris-guzman.github.io/3d-animation.html"> 
         <img src="https://damarisguzman.neocities.org/Portfolio/Guzman_One_2024.png" alt="Image 4">
         <div class="overlay-text">3D Animation</div>
       </a>
