--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 <div class="grid-container">
     <div class="grid-item">
-        <a href="currently.html/">
+        <a href="currently.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Image 1">
             <div class="overlay-text">Current Project/s</div>
         </a>
