--- a/currently.html
+++ b/currently.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Document Viewer</title>
+    <title>Currently Working On - Neuro Bytes</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,6 +59,78 @@
             background-color: #e47d9b;
         }
 
+        .content {
+            display: flex;
+            padding: 40px;
+            gap: 40px;
+        }
+
+        .left {
+            width: 35%;
+        }
+
+        .title {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .description {
+            font-size: 1.2rem;
+            margin-top: 10px;
+            color: #555;
+        }
+
+        .expandable-box {
+            margin-top: 10px;
+            background: #ddd;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            text-align: left;
+            position: relative;
+        }
+
+        .expandable-box:hover {
+            background: #ccc;
+        }
+
+        .hidden-text {
+            display: none;
+            padding-top: 10px;
+            font-size: 0.9rem;
+            color: #666;
+        }
+
+        .right {
+            width: 65%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .gallery-item {
+            background: white;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            background: #ccc;
+            display: block;
+        }
+
+        .gallery-description {
+            margin-top: 10px;
+            font-size: 1rem;
+            color: #444;
+        }
+
         .footer {
             background-color: #ffbcd0;
             color: white;
@@ -83,9 +155,47 @@
     </div>
 </div>
 
+<div class="content">
+    <!-- Left Side (Title and Text) -->
+    <div class="left">
+        <div class="title">Neuro Bytes</div>
+        <div class="description">XKSJSJDJW WNQWJENWJ JWJZJXJWN WJSKSKDJ WQEKFK.</div>
+
+        <div class="expandable-box" onclick="toggleExpand()">
+            Click to expand ▼
+            <div class="hidden-text">
+                More details about Neuro Bytes, its inspiration, and technical aspects. This could be where a deeper explanation goes.
+            </div>
+        </div>
+    </div>
+
+    <!-- Right Side (Gallery) -->
+    <div class="right">
+        <div class="gallery-item">
+            <img src="placeholder.jpg" alt="Placeholder">
+            <div class="gallery-description">Image description here.</div>
+        </div>
+        <div class="gallery-item">
+            <img src="placeholder.jpg" alt="Placeholder">
+            <div class="gallery-description">Another image description.</div>
+        </div>
+        <div class="gallery-item">
+            <img src="placeholder.jpg" alt="Placeholder">
+            <div class="gallery-description">More content about the project.</div>
+        </div>
+    </div>
+</div>
+
 <div class="footer">
     <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
 </div>
+
+<script>
+    function toggleExpand() {
+        var text = document.querySelector(".hidden-text");
+        text.style.display = text.style.display === "block" ? "none" : "block";
+    }
+</script>
 
 </body>
 </html>
