--- a/currently.html
+++ b/currently.html
@@ -187,19 +187,18 @@
     </div>
 
     <!-- Right Side (Gallery) -->
-    <div class="right">
-        <div class="gallery-item">
-            <video controls>
-                <source src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/view?usp=sharing" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <div class="gallery-description">Description for first video.</div>
-        </div>
-        <div class="gallery-item">
-            <video controls>
-                <source src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/view?usp=drive_link" type="video/mp4">
-            </video>
-            <div class="gallery-description">Description for second video.</div>
+   <div class="right">
+    <div class="gallery-item">
+        <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
+            width="100%" height="360" allowfullscreen>
+        </iframe>
+        <div class="gallery-description">Description for first video.</div>
+    </div>
+    <div class="gallery-item">
+        <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
+            width="100%" height="360" allowfullscreen>
+        </iframe>
+        <div class="gallery-description">Description for second video.</div>
         </div>
         <div class="gallery-item">
             <img src="placeholder.jpg" alt="Placeholder">
