--- a/currently.html
+++ b/currently.html
@@ -192,13 +192,14 @@
         <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
             width="100%" height="360" allowfullscreen>
         </iframe>
-        <div class="gallery-description">Description for first video.</div>
+        <div class="gallery-description">Visualizing an AI "brain" (ae). Smooth gradients b/w colors + shapes lend the composition a hypnotic, dreamlike quality, blurring the line b/w something living + an artificial, computer-generated environment.
+</div>
     </div>
     <div class="gallery-item">
         <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
             width="100%" height="360" allowfullscreen>
         </iframe>
-        <div class="gallery-description">Description for second video.</div>
+        <div class="gallery-description">Visualization v2 (ae). Simultaneously sensual + slightly uncanny, invoking the sense of looking up-close at a viscous biological mass or a surreal, alien landscape.  </div>
         </div>
         <div class="gallery-item">
             <img src="placeholder.jpg" alt="Placeholder">
