--- a/currently.html
+++ b/currently.html
@@ -176,12 +176,20 @@
     <!-- Left Side (Title and Text) -->
     <div class="left">
         <div class="title">Neuro Bytes</div>
-        <div class="description">XKSJSJDJW WNQWJENWJ JWJZJXJWN WJSKSKDJ WQEKFK.</div>
+        <div class="description">Where does our agency end and the algorithm take over?
+
+</div>
 
         <div class="expandable-box" onclick="toggleExpand()">
-            Click to expand ▼
+            Read more ▼
             <div class="hidden-text">
-                More details about Neuro Bytes, its inspiration, and technical aspects. This could be where a deeper explanation goes.
+               This project centers around a short video that critically examines the entanglement between human cognition and digital technology, visualizing the cyclical relationship between productivity, burnout, and digital embodiment. The video integrates visual effects, animated UI overlays, and glitch transitions to simulate the overwhelming sensory experience of navigating hyper-mediated digital spaces. Drawing inspiration from posthumanist discourse, the project interrogates the porous boundary between human agency and algorithmic influence, illustrating the ways in which technology extends, fragments, and distorts self-perception.
+
+At its core, the video engages with the aesthetics of malfunction—graphical glitches, corrupted data streams, and intrusive notifications serve as both formal and conceptual devices that underscore the tensions between human cognition and technological acceleration. The protagonist’s interface, which overlays health metrics, emotional status, and a Tamagotchi-style wellness monitor, transforms the body into an informatic system, a site of constant optimization yet inevitable dysfunction. The visual language draws from both PC Music aesthetics and early internet kitsch, employing glossy neon UI elements to construct a hyper-stylized representation of technological embodiment.
+
+The control panel UI functions as a diegetic interface, a responsive system that visualizes the protagonist’s deteriorating mental state. The notifications—rendered as polished, hyperreal buttons—appear above the computer screen at moments of peak sensory overload, serving as both narrative cues and meta-commentary on the gamification of digital labor. These interruptions, at once sterile and frenetic, articulate a tension between control and collapse, highlighting how digital interfaces mediate self-regulation while simultaneously inducing cognitive fatigue. As the protagonist reaches a breaking point, the system spirals into glitch-induced chaos, culminating in a final moment of technological and corporeal burnout—an abrupt shutdown that mirrors the limits of both machine and mind.
+
+By merging experimental visual effects, UI-driven storytelling, and conceptual inquiries into digital subjectivity, Neuro Bytes presents a meditation on the pressures of technological embodiment, illustrating the ways in which humans and machines co-constitute each other in an era of algorithmic acceleration.
             </div>
         </div>
     </div>
