--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connecting</title>
     <style>
+        /* Import DepartureMono font */
+        @font-face {
+            font-family: 'DepartureMono';
+            src: url('https://humantooth.neocities.org/fonts/DepartureMono.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        /* Apply DepartureMono font to the entire page */
         body {
-            font-family: Arial, Helvetica, sans-serif, sans-serif;
+            font-family: 'DepartureMono', monospace;
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
@@ -52,17 +61,6 @@
         .header a span:nth-child(8) { animation-delay: 0.7s; }
         .header a span:nth-child(9) { animation-delay: 0.8s; }
         .header a span:nth-child(10) { animation-delay: 0.9s; }
-        .header a span:nth-child(11) { animation-delay: 1.0s; }
-        .header a span:nth-child(12) { animation-delay: 1.1s; }
-        .header a span:nth-child(13) { animation-delay: 1.2s; }
-        .header a span:nth-child(14) { animation-delay: 1.3s; }
-        .header a span:nth-child(15) { animation-delay: 1.4s; }
-        .header a span:nth-child(16) { animation-delay: 1.5s; }
-        .header a span:nth-child(17) { animation-delay: 1.6s; }
-        .header a span:nth-child(18) { animation-delay: 1.7s; }
-        .header a span:nth-child(19) { animation-delay: 1.8s; }
-
-        
 
         @keyframes wave {
             0% { transform: translateY(0); }
@@ -212,53 +210,29 @@
 <div class="main-content">
     <div class="sidebar">
         <img src="https://damarisguzman.neocities.org/Portfolio/maris%20is%20in.png" alt="Your Image">
-        <p>Hi, it's so good to see you! Welcome to my portfolio site :) This website still under construction, but feel free to explore the pages. Thank you for visiting! *TIP: This is best experienced on a desktop. </p>
+        <p>Hi, it's so good to see you! Welcome to my portfolio site :) This website is still under construction, but feel free to explore the pages. Thank you for visiting! *TIP: This is best experienced on a desktop.</p>
 
-<div class="cute-box">
-    <a href="https://damarisguzman.neocities.org/about" style="color: inherit; text-decoration: none;">
-        Click to learn about me
-    </a>
-</div>
+        <div class="cute-box">
+            <a href="https://damarisguzman.neocities.org/about" style="color: inherit; text-decoration: none;">
+                Click to learn about me
+            </a>
+        </div>
     </div>
-<div class="grid-container">
-    <div class="grid-item">
-        <a href="currently.html">
-            <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Image 1">
-            <div class="overlay-text">Current Project/s</div>
-        </a>
-    </div>
-    <div class="grid-item">
-       <a href="https://damarisguzman.neocities.org/newmaris">
-        <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="Image 3">
-        <div class="overlay-text">New Media</div>
-       </a>
-    </div>
-    <div class="grid-item">
-       <a href="https://damarisguzman.neocities.org/video">
-        <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Image 2">
-        <div class="overlay-text">Video Editing</div>
-       </a>
-    </div>
-    <div class="grid-item">
-      <a href="3danimation.html"> 
-        <img src="https://damarisguzman.neocities.org/Portfolio/Guzman_One_2024.png" alt="Image 4">
-        <div class="overlay-text">3D Animation</div>
-      </a>
-    </div>
-    <div class="grid-item">
-      <a href="https://damarisguzman.neocities.org/archive">
-        <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Image 5">
-        <div class="overlay-text">Archive</div>
-      </a>
-    </div>
-    <div class="grid-item">
-      <a href="https://damarisguzman.neocities.org/more">
-        <img src="https://damarisguzman.neocities.org/Portfolio/DRIP.JPG" alt="Image 6">
-        <div class="overlay-text">More Media</div>
-      </a>
-    </div>
-</div>
 
+    <div class="grid-container">
+        <div class="grid-item">
+            <a href="currently.html">
+                <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Image 1">
+                <div class="overlay-text">Current Project/s</div>
+            </a>
+        </div>
+        <div class="grid-item">
+           <a href="https://damarisguzman.neocities.org/newmaris">
+            <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="Image 3">
+            <div class="overlay-text">New Media</div>
+           </a>
+        </div>
+    </div>
 </div>
 
 <div class="footer">
