--- a/index.html
+++ b/index.html
@@ -46,28 +46,6 @@
             position: relative;
         }
 
-        .header a span {
-            display: inline-block;
-            animation: wave 2s infinite;
-            font-size: 2rem;
-        }
-
-        .header a span:nth-child(2) { animation-delay: 0.1s; }
-        .header a span:nth-child(3) { animation-delay: 0.2s; }
-        .header a span:nth-child(4) { animation-delay: 0.3s; }
-        .header a span:nth-child(5) { animation-delay: 0.4s; }
-        .header a span:nth-child(6) { animation-delay: 0.5s; }
-        .header a span:nth-child(7) { animation-delay: 0.6s; }
-        .header a span:nth-child(8) { animation-delay: 0.7s; }
-        .header a span:nth-child(9) { animation-delay: 0.8s; }
-        .header a span:nth-child(10) { animation-delay: 0.9s; }
-
-        @keyframes wave {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-            100% { transform: translateY(0); }
-        }
-
         .main-content {
             display: flex;
             flex-direction: column;
@@ -106,28 +84,6 @@
             width: 100%;
             border-radius: 10px;
             margin-bottom: 15px;
-        }
-
-        .sidebar p {
-            color: #333;
-            font-size: 14px;
-            line-height: 1.5;
-        }
-
-        .cute-box {
-            background-color: #ffccdd;
-            color: #333;
-            padding: 15px;
-            text-align: center;
-            border-radius: 10px;
-            font-weight: bold;
-            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .cute-box:hover {
-            background-color: #ffc1d0;
         }
 
         .grid-container {
@@ -190,27 +146,16 @@
 
 <div class="header">
     <h1><a href="/about">
-        <span>D</span>
-        <span>a</span>
-        <span>m</span>
-        <span>a</span>
-        <span>r</span>
-        <span>i</span>
-        <span>s</span>
+        <span>D</span><span>a</span><span>m</span><span>a</span><span>r</span><span>i</span><span>s</span>
         <span> </span>
-        <span>G</span>
-        <span>U</span>
-        <span>Z</span>
-        <span>M</span>
-        <span>A</span>
-        <span>N</span>
+        <span>G</span><span>U</span><span>Z</span><span>M</span><span>A</span><span>N</span>
     </a></h1>
 </div>
 
 <div class="main-content">
     <div class="sidebar">
         <img src="https://damarisguzman.neocities.org/Portfolio/maris%20is%20in.png" alt="Your Image">
-        <p>Hi, it's so good to see you! Welcome to my portfolio site :) This website is still under construction, but feel free to explore the pages. Thank you for visiting! *TIP: This is best experienced on a desktop.</p>
+        <p>Hi, it's so good to see you! Welcome to my portfolio site :) This website is still under construction, but feel free to explore the pages. Thank you for visiting! *TIP: Best viewed on desktop.</p>
 
         <div class="cute-box">
             <a href="https://damarisguzman.neocities.org/about" style="color: inherit; text-decoration: none;">
@@ -222,21 +167,45 @@
     <div class="grid-container">
         <div class="grid-item">
             <a href="currently.html">
-                <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Image 1">
+                <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Current Projects">
                 <div class="overlay-text">Current Project/s</div>
             </a>
         </div>
         <div class="grid-item">
            <a href="https://damarisguzman.neocities.org/newmaris">
-            <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="Image 3">
+            <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="New Media">
             <div class="overlay-text">New Media</div>
            </a>
+        </div>
+        <div class="grid-item">
+           <a href="https://damarisguzman.neocities.org/video">
+            <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Video Editing">
+            <div class="overlay-text">Video Editing</div>
+           </a>
+        </div>
+        <div class="grid-item">
+          <a href="3danimation.html"> 
+            <img src="https://damarisguzman.neocities.org/Portfolio/Guzman_One_2024.png" alt="3D Animation">
+            <div class="overlay-text">3D Animation</div>
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="https://damarisguzman.neocities.org/archive">
+            <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Archive">
+            <div class="overlay-text">Archive</div>
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="https://damarisguzman.neocities.org/more">
+            <img src="https://damarisguzman.neocities.org/Portfolio/DRIP.JPG" alt="More Media">
+            <div class="overlay-text">More Media</div>
+          </a>
         </div>
     </div>
 </div>
 
 <div class="footer">
-    <p>© 2024 DAMARIS GUZMAN</p>
+    <p>© 2025 DAMARIS GUZMAN</p>
 </div>
 
 </body>
